<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleRecetaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvNombreReceta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/inicio_nombre_receta"
            android:textColor="@color/turquesaOscuro"
            android:textSize="23sp"
            android:textStyle="bold"
            />
        <ImageView
            android:id="@+id/ivRecipePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/recipe_photo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lista_ingredientes"
            android:textColor="@color/rojoOscuro"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRecetaIngredientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:divider="@color/white"
            android:nestedScrollingEnabled="false"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preparacion"
            android:textColor="@color/turquesaOscuro"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/tvDescripcionReceta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            android:text="@string/inicio_nombre_receta"
            android:textColor="@color/turquesaOscuro"
            android:textStyle="normal"
            android:textSize="17sp"
            android:padding="6dp"
            />

        <Button
            android:id="@+id/botonReceta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/turquesaOscuro"
            android:text="@string/receta_guardar"
            />

    </LinearLayout>
</ScrollView>