<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include
        layout="@layout/barra_personalizada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="15dp"/>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:isScrollContainer="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inicio_receta_recomendada"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textColor="@color/naranjaOscuro"
                android:textStyle="bold"
                />

            <LinearLayout
                android:id="@+id/item_recipe_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <include layout="@layout/item_recipe"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inicio_buscas_receta"
                android:textAlignment="center"
                android:textColor="@color/turquesaOscuro"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/turquesaClaro"
                        android:layout_margin="6dp"
                        android:text="@string/inicio_primer_ingrediente"/>
                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:textSize="14sp"
                        android:maxLines="1"
                        android:singleLine="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/turquesaClaro"
                        android:layout_margin="6dp"
                        android:text="@string/inicio_segundo_ingrediente"/>
                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:textSize="14sp"
                        android:maxLines="1"
                        android:singleLine="true"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/turquesaClaro"
                        android:layout_margin="6dp"
                        android:text="@string/inicio_tercer_ingrediente"/>
                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:textSize="14sp"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </LinearLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/turquesaOscuro"
                    android:text="@string/inicio_boton_buscar"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>