<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:id="@+id/perfilImagen"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logoperfil"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/perfilUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/perfilImagen"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:text="@string/perfil_usuario"
        android:textColor="@color/turquesaOscuro"
        android:textSize="20dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/perfilRellenarUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Al Paco"
        android:layout_below="@+id/perfilImagen"
        android:layout_toEndOf="@id/perfilUsuario"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="12dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/turquesaClaro"
        />

    <TextView
        android:id="@+id/perfilEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/perfilUsuario"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/perfil_Email"
        android:textColor="@color/turquesaOscuro"
        android:textSize="20dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/perfilRellenarEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Al_Paco@gmail.com"
        android:layout_below="@+id/perfilUsuario"
        android:layout_toEndOf="@id/perfilEmail"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/turquesaClaro"
        />

    <TextView
        android:id="@+id/perfilContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/perfilEmail"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/perfil_contraseña"
        android:textColor="@color/turquesaOscuro"
        android:textSize="20dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/perfilRellenarContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="**********"
        android:layout_below="@+id/perfilEmail"
        android:layout_toEndOf="@id/perfilContraseña"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/turquesaClaro"
        />

    <Button
        android:id="@+id/perfilBotonAceptar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/turquesaClaro"
        android:text="@string/perfil_boton_aceptar"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        />

    <Button
        android:id="@+id/perfilBotonCancelar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/turquesaClaro"
        android:text="@string/perfil_boton_modificar"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        />
</RelativeLayout>