<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <ImageButton
            android:id="@+id/menuBotonInicio"
            android:layout_width="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="50dp"
            android:background="@drawable/hogar"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_inicio"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="12dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <ImageButton
            android:id="@+id/menuBotonFavoritos"
            android:layout_width="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="50dp"
            android:background="@drawable/favorito"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_favoritos"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="12dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <ImageButton
            android:id="@+id/menuBotonMenuSemanal"
            android:layout_width="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="50dp"
            android:background="@drawable/calendario"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_menu_semanal"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="12dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <ImageButton
            android:id="@+id/menuBotonNevera"
            android:layout_width="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="50dp"
            android:background="@drawable/nevera"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_nevera"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="12dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <ImageButton
            android:id="@+id/menuBotonPerfil"
            android:layout_width="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="50dp"
            android:background="@drawable/paquita"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_perfil"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="12dp"
            />
    </LinearLayout>
  <!--
    <ImageButton
        android:id="@+id/menuBotonFavoritos"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/favorito"
        />
    <ImageButton
        android:id="@+id/menuBotonMenu"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/calendario"
        />
    <ImageButton
        android:id="@+id/menuBotonNevera"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/nevera"
        />
    <ImageButton
        android:id="@+id/menuBotonPerfil"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/paquita"
        android:scaleType="center"
        android:adjustViewBounds="true"
        />
    -->

</LinearLayout>